@@ -8,6 +8,8 @@ BEGIN { chdir 't' if -d 't' };
 eval 'use Test::Pod';
 plan skip_all => "Test::Pod v0.95 required for testing POD"
     if $@ || $Test::Pod::VERSION < 0.95;
+    
+plan skip_all => "Pod tests disabled under perl core" if $ENV{PERL_CORE};    
 
 my @files;
 find( sub { push @files, File::Spec->catfile(
